css/style.css
* {
    box-sizing: border-box;
}


/*html, body {
    height: 100%;
    background-color: black;
}*/

body {
    background-color: black;
    height: 100%;
    background-attachment: fixed;
    background-position: right center;
    background-repeat: no-repeat;
    background-image: url("../img/landing1920.jpg");
    background-size: cover;
}

.books-bg {
    background: url("../img/books1920.jpg") no-repeat right center fixed;
    background-size: cover;
    /*z-index: 1;*/
    -webkit-transition: all 0.9s ease-in 0.15s;
    -moz-transition: all 0.9s ease-in 0.15s;
    transition: all 0.9s ease-in 0.15s;
}

.coffee-bg {
    background: url("../img/coffee1920.jpg") no-repeat right center fixed;
    background-size: cover;
    /*z-index: 2;*/
    -webkit-transition: all 0.9s ease-in 0.2s;
    -moz-transition: all 0.9s ease-in 0.2s;
    transition: all 0.9s ease-in 0.2s;
}

.final-bg {
    background: url("../img/final1920.jpg") no-repeat right center fixed;
    background-size: cover;
    /*z-index: 3;*/
    -webkit-transition: all 0.9s ease-in 0.2s;
    -moz-transition: all 0.9s ease-in 0.2s;
    transition: all 0.9s ease-in 0.2s;
}

header {
    width: 100%;
    background: rgba(0, 0, 0, 0.7);
    text-align: center;
    border-radius: 8px;
}

a:link, a:active, a:visited {
    color: #337ab7;
}

#external-link-img {
    width: 12px;
}

a:hover {
    text-decoration: underline;
}

.title {
    /*width: 100%;*/
    margin-top: 0;
    padding-top: 20px;
    /*border: 1px solid white;*/
    font-family: 'Dancing Script', cursive;
    font-size: 115px;
    /*color: #4195b7;*/
    color: #337ab7;
    font-weight: bold;
    letter-spacing: 7px;
}

.subtitle {
    /*padding-top: 5px;*/
    padding-bottom: 10px;
    color: #C7A572;
    font-weight: bold;
    font-size: 22px;
    font-family: 'Oswald', sans-serif;
    /*border: 1px solid white;*/
    letter-spacing: 2px;
}

h1 {
    margin-bottom: 0;
}

.instructions {
    padding-top: 30px;
    color: #C7A572;
    width: 50%;
    margin-left: auto;
    margin-right: auto;
}

.instruction-merienda {
    font-family: 'Merienda One', cursive;
    font-size: 37px;
    margin-right: 20px;
}

.instruction-helvetica {
    /*font-family: 'Oswald', sans-serif;*/
    font-family: Helvetica;
    font-size: 24px;
    font-weight: bold;
}

.active {
    /*color: #177E89;*/
    color: #177E89;
    font-weight: bold;
    background-color: gray;
    /*font-size: 18px;*/
}

.hide {
    display: none;
}

.hide-map {
    visibility: hidden;
    height: 0;
    overflow: hidden;
}

.hidden-tagline {
    visibility: hidden;
}

.landing-page, .find-book-page, .find-coffee-shop-page, .final-page {
    /*margin-left: auto;
    margin-right: auto;*/
    background: rgba(0, 0, 0, 0.7);
    color: #4195b7;
    border-radius: 8px;
}

#landingBtn {
    font-family: Tahoma;
    font-size: 18px;
}


/*.landing-page {
    width: 100%;
    padding-bottom: 50px;
}

.find-book-page {
    width: 100%;
    padding-bottom: 10px;
}

.find-coffee-shop-page {
    width: 100%;
    padding-bottom: 10px;
}

.final-page {
    width: 100%;
    padding-bottom: 10px;
}*/

#landing-btn-container {
    text-align: center;
    margin-top: 50px;
    padding-bottom: 2%;
}

#book-search-tagline {
    display: inline-block;
    /*margin-top: 20px;*/
    margin-bottom: 20px;
    font-family: 'Merienda One', cursive;
    font-size: 27px;
    color: #C7A572;
}

#book-select-tagline {
    /*display: none;*/
    font-family: Helvetica;
    font-size: 20px;
    color: #C7A572;
    margin-top: 10px;
}

#book-search-form {
    margin-bottom: 20px;
}

.book-page-inner-container {
    margin-left: 8%;
    margin-top: 5%;
}

.book-results, .coffee-shop-results, .final-page-results {
    width: 100%;
    height: 545px;
    overflow: auto;
    /*border: 1px solid black;*/
    border-radius: 8px;
    margin-bottom: 2%;
    background: rgba(0, 0, 0, 0.5);
}

.book-results {
    padding: 12px;
    color: #337ab7;
    width: 80%;
}

.book-info {
    margin-bottom: 18px;
}

.book-title {
    font-weight: bold;
    font-size: 20px;
}

.book-title-author-wrap {
    background-color: black;
    border-bottom: 1px solid #303030;
}

.book-description-snippet {
    display: inline-block;
    width: 65%;
}

.book-image {
    width: 30%
}

.book-image img {
    width: 100%;
}

.select-book {
    margin-top: 5px;
    /*color: black;*/
    font-size: 16px;
}

#coffee-shop-input {
    display: none;
    width: 45%;
    font-size: 18px;
    margin-top: 10px;
}

.coffee-shop-search-tagline-1 {
    display: inline-block;
    margin-top: 20px;
    margin-bottom: 20px;
    font-family: 'Merienda One', cursive;
    font-size: 27px;
    color: #C7A572;
}

.coffee-shop-search-tagline-2 {
    /*visibility: hidden;*/
    font-family: Helvetica;
    font-size: 20px;
    color: #C7A572;
}

#map {
    /*height: 540px;*/
    display: inline-block;
}

#final-map {
    display: inline-block;
}

.side-panel-wrap {
    margin-top: 106px;
    margin-bottom: 2%;
    display: inline-block;
    height: 545px;
    /*width: 352px;*/
    width: 100%;
    text-align: center;
    /*vertical-align fixes alingment bug in MS Edge*/
    vertical-align: top;
}

#coffeeShopBtn {
    /*display: none;*/
    /*float: right;*/
    /*position: relative;
    left: 480px;
    bottom: 3px;*/
    border-radius: 5px;
    /*margin-right: 55px;*/
    margin-bottom: 8px;
}

#coffee-shop-reviews {
    /*margin-top: 40px;*/
    /*width: 350px;*/
    width: 100%;
    height: 504px;
    padding: 7px;
    /*display: inline-block;*/
    border: 1px solid black;
    border-radius: 8px;
    overflow: auto;
    /*background-color: #BD986F;*/
    color: #4195b7;
    font-size: 1.2em;
    background: rgba(0, 0, 0, 0.5);
}

.selected-results {
    width: 100%;
    /*height: 100px;*/
    margin-top: 5px;
    margin-bottom: 5px;
    /*margin-left: auto;
    margin-right: auto;*/
    padding: 10px;
    border-radius: 8px;
    /*background-color: black;*/
    background: rgba(0, 0, 0, 0.5);
    /*overflow: auto;*/
    color: #C7A572;
    font-size: 1.22em;
}

.selected-book {
    /*height: 100px;*/
    /*padding: 10px;*/
    float: left;
    /*border-radius: 8px;*/
    /*font-weight: bold;*/
    margin-left: 4%;
    padding-top: 2%;
    padding-bottom: 2%;
    /*margin-right: auto;*/
    /*-webkit-transition: background-color 0.3s ease 0s;
    -moz-transition: background-color 0.3s ease 0s;
    transition: background-color 0.3s ease 0s;*/
}

.final-page-book-name, .final-page-book-url, .final-page-shop-name, .final-page-shop-address {
    font-weight: bold;
    background-color: black;
    font-size: 1.31em;
}

.final-page-guide {
    /*font-weight: bold;
    background-color: black;*/
    font-size: 0.9em;
    color: gray;
}

.selected-coffee-shop {
    /*height: 100px;*/
    /*margin-left: 5px;*/
    /*padding-left: 5px;*/
    display: inline-block;
    /*padding: 10px;*/
    /*border-radius: 8px;*/
    /*font-weight: bold;*/
    margin-left: 4%;
    padding-top: 2%;
    padding-bottom: 2%;
    /*border-left: 1px solid white;*/
    /*margin-right: auto;*/
    /*-webkit-transition: background-color 0.3s ease 0s;
    -moz-transition: background-color 0.3s ease 0s;
    transition: background-color 0.3s ease 0s;*/
}


/*.selected-coffee-shop-name {
    display: inline-block;
    color: white;
}*/

.selected-coffee-shop-vicinity {
    display: inline-block;
}

#text-directions-panel {
    width: 100%;
    height: 545px;
    padding: 7px;
    display: inline-block;
    border: 1px solid black;
    border-radius: 8px;
    overflow: auto;
    margin-bottom: 2%;
    color: #4195b7;
    background: rgba(0, 0, 0, 0.5);
}

.address-input-panel {
    display: inline-block;
    width: 100%;
    height: 545px;
    padding: 7px;
    border: 1px solid black;
    border-radius: 8px;
    overflow: auto;
    margin-bottom: 2%;
    color: #C7A572;
    background: rgba(0, 0, 0, 0.5);
    font-size: 1.2em;
}

#final-form {
    margin-top: 40px;
}

label#startLabel, label#endLabel, label#travelModeLabel {
    /*margin-top: 20px;*/
    margin-left: 15px;
}

button#finalBtn {
    margin-top: 5px;
}

.coffee-review {
    border: 1px solid #303030;
    border-radius: 8px;
}

.coffee-review-background {
    background-color: black;
    font-weight: bold;
    color: #337ab7;
    border-bottom: 1px solid #303030;
    font-size: 1.15em;
    border-radius: 8px 8px 0 0;
}

.coffee-review-text {
    text-align: left;
    padding-left: 4px;
    color: #337ab7;
}

.adp-directions {
    color: white !important;
}

.adp-summary {
    color: #337ab7 !important;
    font-weight: bold;
}

.adp-stepicon {
    background-color: green !important;
}

.address-instructions {
    color: #337ab7;
    font-weight: bold;
    font-size: 18px;
}

@media only screen and (max-width: 740px) {
    .title {
        font-size: 50px;
        padding-top: 5px;
    }
    .subtitle {
        font-size: 15px;
    }
    h1 {
        margin-bottom: 15px;
    }
    .instructions {
        width: 108%;
        margin-left: -15px;
        margin-right: -15px;
    }
    .landing-page {
        margin-top: 80px;
    }
    #landingBtn {
        font-size: 15px;
    }
    .instruction-merienda {
        font-size: 26px;
        margin-right: 7px;
    }
    .instruction-helvetica {
        font-size: 13px;
    }
    body {
        background-color: black;
        height: 100%;
        background-attachment: fixed;
        /*background-position: right center;*/
        background-position: center center;
        background-repeat: no-repeat;
        background-image: url("../img/booksMobile960.jpg");
        background-size: cover;
    }
    .books-bg {
        background: url("../img/booksMobile960.jpg") no-repeat center center fixed;
        background-size: cover;
        -webkit-transition: all 0.9s ease-in 0.15s;
        -moz-transition: all 0.9s ease-in 0.15s;
        transition: all 0.9s ease-in 0.15s;
    }
    .coffee-bg {
        background: url("../img/booksMobile960.jpg") no-repeat center center fixed;
        background-size: cover;
        /*z-index: 2;*/
        -webkit-transition: all 0.9s ease-in 0.2s;
        -moz-transition: all 0.9s ease-in 0.2s;
        transition: all 0.9s ease-in 0.2s;
    }
    .final-bg {
        background: url("../img/booksMobile960.jpg") no-repeat center center fixed;
        background-size: cover;
        /*z-index: 3;*/
        -webkit-transition: all 0.9s ease-in 0.2s;
        -moz-transition: all 0.9s ease-in 0.2s;
        transition: all 0.9s ease-in 0.2s;
    }
    #book-search-tagline, .coffee-shop-search-tagline-1 {
        margin-top: 5px;
        margin-bottom: 8px;
    }
    .book-results, .coffee-shop-results, .final-page-results {
        height: 285px;
    }
    .book-results, .book-description-snippet {
        width: 100%;
    }
    .book-page-inner-container {
        margin-left: 0;
    }
    .book-image {
        width: 60%;
    }
    #coffee-shop-input {
        width: 75%;
        margin-top: 50px;
    }
    .side-panel-wrap {
        margin-top: 2px;
    }
    #booksBtn {
        margin-top: 5px;
    }
    #text-directions-panel {
        margin-top: 4%;
        margin-bottom: 4%;
    }
    /*.selected-book {
        word-wrap: break-word;
    }*/
    .selected-results {
        font-size: 1em;
        padding: 0;
    }
    .final-page-book-name, .final-page-book-url, .final-page-shop-name, .final-page-shop-address {
        font-size: 1.3em;
    }
}

@media only screen and (max-width: 321px) {
    .title {
        font-size: 44px;
    }
}

